[yapf]
based_on_style = yapf
spaces_before_comment = 2
dedent_closing_brackets = true
column_limit = 80
continuation_indent_width = 2

[flake8]
exclude =
    .git
indent_size = 2
max-line-length = 80
extend-ignore =
    E731
    E124
    E741
    F722
    E743

[pycodestyle]
ignore = E731

[metadata]
name = autofd
version = 0.0.1
author = "Min Lin"
author_email = "linmin@sea.com"
description = "Automatic Functional Derivative in JAX"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sail-sg/autofd
project_urls =
    Bug Tracker = https://github.com/sail-sg/autofd/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.11
install_requires =
    jax>=0.4.14
    jaxlib>=0.4.14
    jaxtyping>=0.2.21
    makefun>=1.15.1

[options.packages.find]
include = autofd*
